# bookstore-backend

./: README.MD  pyproject.toml
app/: app.py  masterpieces.py  model.py  serializer.py
app/db/: bookstore.db
migrations/versions/: 2a5704515d1e_.py
tests/: conftest.py  test_gets_for_book.py
tests/unit/: test_insert_books.py
