[tool.poetry]
name = "bookstore-backend"
version = "0.1.0"
description = ""
authors = ["Evelyn Souza <lm.elyn@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"
pytest-cov = "^3.0.0"
install = "^1.3.5"
coverage = "^6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
